--- a/src/main/resources/view/MainControlView.fxml
+++ b/src/main/resources/view/MainControlView.fxml
@@ -36,13 +36,19 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.RadioMenuItem?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SeparatorMenuItem?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group50.controller.MainControlController" styleClass="stack-pane-background">
+<VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group50.controller.MainControlController">
   <children>
     <MenuBar useSystemMenuBar="true" VBox.vgrow="NEVER">
       <menus>
@@ -85,17 +91,43 @@
             </Menu>
       </menus>
     </MenuBar>
-      <BorderPane prefHeight="378.0" prefWidth="640.0" >
-         <right>
-            <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
-               <children>
-                  <ComboBox prefWidth="150.0" promptText="Select Runway" />
-               </children>
-            </VBox>
-         </right>
-          <center>
-              <Pane fx:id="viewContainer" prefWidth="600" prefHeight="400"/>
-          </center>
-      </BorderPane>
+      <StackPane prefHeight="150.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+         <children>
+            <SplitPane dividerPositions="0.7311912225705329" prefHeight="377.0" prefWidth="640.0">
+               <items>
+                  <Pane fx:id="viewContainer" prefHeight="371.0" prefWidth="418.0" styleClass="stack-pane-background" />
+                  <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0">
+                     <content>
+                        <VBox prefHeight="368.0" prefWidth="167.0" spacing="10.0" style="-fx-background-color: darkgray;">
+                           <children>
+                              <ComboBox fx:id="viewTypeSelector" prefWidth="150.0" promptText="VIew Type" />
+                              <ComboBox fx:id="runwaySelector" prefWidth="150.0" promptText="Select Runway" />
+                              <GridPane>
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <RadioButton mnemonicParsing="false" text="RESA" GridPane.rowIndex="2" />
+                                    <RadioButton mnemonicParsing="false" text="TORA" />
+                                    <RadioButton mnemonicParsing="false" text="TODA" GridPane.columnIndex="1" />
+                                    <RadioButton mnemonicParsing="false" text="LDA" GridPane.rowIndex="1" />
+                                    <RadioButton mnemonicParsing="false" text="ASDA" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <RadioButton mnemonicParsing="false" text="RadioButton" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                 </children>
+                              </GridPane>
+                           </children>
+                        </VBox>
+                     </content>
+                  </ScrollPane>
+               </items>
+            </SplitPane>
+         </children>
+      </StackPane>
   </children>
 </VBox>
