--- a/src/main/resources/view/MainControlView.fxml
+++ b/src/main/resources/view/MainControlView.fxml
@@ -32,6 +32,9 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -98,10 +101,20 @@
                   <Pane fx:id="viewContainer" prefHeight="371.0" prefWidth="418.0" styleClass="stack-pane-background" />
                   <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0">
                      <content>
-                        <VBox prefHeight="368.0" prefWidth="167.0" spacing="10.0" style="-fx-background-color: darkgray;">
+                        <VBox fx:id="scrollPaneVbox" prefHeight="368.0" prefWidth="167.0" spacing="10.0" style="-fx-background-color: darkgray;">
                            <children>
-                              <ComboBox fx:id="viewTypeSelector" prefWidth="150.0" promptText="VIew Type" />
-                              <ComboBox fx:id="runwaySelector" prefWidth="150.0" promptText="Select Runway" />
+                              <ComboBox fx:id="viewTypeSelector" prefWidth="150.0" promptText="View Type">
+                                  <items>
+                                      <!-- Create an observable list factory for the combo box items -->
+                                      <FXCollections fx:factory="observableArrayList">
+                                          <!-- Add options here -->
+                                          <String fx:value="Top Down" />
+                                          <String fx:value="Side on" />
+                                      </FXCollections>
+                                  </items>
+
+                              </ComboBox>
+                              <ComboBox fx:id="runwaySelector" onAction="#handleRunwaySelectorInput" prefWidth="150.0" promptText="Select Runway" />
                               <GridPane>
                                 <columnConstraints>
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -113,14 +126,14 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <RadioButton mnemonicParsing="false" text="RESA" GridPane.rowIndex="2" />
-                                    <RadioButton mnemonicParsing="false" text="TORA" />
-                                    <RadioButton mnemonicParsing="false" text="TODA" GridPane.columnIndex="1" />
-                                    <RadioButton mnemonicParsing="false" text="LDA" GridPane.rowIndex="1" />
-                                    <RadioButton mnemonicParsing="false" text="ASDA" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                    <RadioButton mnemonicParsing="false" text="RadioButton" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                    <RadioButton fx:id="showResaToggle" mnemonicParsing="false" onAction="#handleResaOverlayShow" selected="true" text="RESA" GridPane.rowIndex="2" />
+                                    <RadioButton fx:id="showToraToggle" mnemonicParsing="false" onAction="#handleToraOverlayShow" selected="true" text="TORA" />
+                                    <RadioButton fx:id="showTodaToggle" mnemonicParsing="false" onAction="#handleTodaOverlayShow" selected="true" text="TODA" GridPane.columnIndex="1" />
+                                    <RadioButton fx:id="showLdaToggle" mnemonicParsing="false" onAction="#handleLdaOverlayShow" selected="true" text="LDA" GridPane.rowIndex="1" />
+                                    <RadioButton fx:id="showAsdaToggle" mnemonicParsing="false" onAction="#handleAsdaOverlayShow" selected="true" text="ASDA" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                                  </children>
                               </GridPane>
+                              <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="165.0" text="Add Obstacle" />
                            </children>
                         </VBox>
                      </content>
