can manually input parameter

--- a/src/main/resources/view/MainControlView.fxml
+++ b/src/main/resources/view/MainControlView.fxml
@@ -52,6 +52,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.TextField?>
 
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group50.controller.MainControlController">
   <children>
@@ -142,6 +143,16 @@
                                  </children>
                               </GridPane>
                               <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="165.0" text="Add Obstacle" />
+                               <Label text="Manual Runway Parameters Input" style="-fx-font-size: 14px; -fx-font-weight: bold;"/>
+                               <Label text="TORA (m)" />
+                               <TextField fx:id="toraInput" promptText="Enter TORA" />
+                               <Label text="TODA (m)" />
+                               <TextField fx:id="todaInput" promptText="Enter TODA" />
+                               <Label text="ASDA (m)" />
+                               <TextField fx:id="asdaInput" promptText="Enter ASDA" />
+                               <Label text="LDA (m)" />
+                               <TextField fx:id="ldaInput" promptText="Enter LDA" />
+                               <Button text="Apply Parameters" onAction="#handleApplyParameters" prefWidth="150" />
                            </children>
                         </VBox>
                      </content>
