add calculation details when apply parameter

--- a/src/main/resources/view/ComparisonView.fxml
+++ b/src/main/resources/view/ComparisonView.fxml
@@ -6,10 +6,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="group50.controller.ComparisonController">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="group50.controller.ComparisonController"
+      spacing="10" alignment="CENTER" prefWidth="600">
 
-    <TableView fx:id="comparisonTable" prefWidth="500" prefHeight="180" style="-fx-border-color: #cccccc; -fx-border-radius: 5; -fx-background-radius: 5;">
+    <TableView fx:id="comparisonTable" prefWidth="600" prefHeight="180" style="-fx-border-color: #cccccc; -fx-border-radius: 5; -fx-background-radius: 5;">
         <columns>
             <TableColumn fx:id="parameterColumn" text="Parameter" prefWidth="150.0" />
             <TableColumn fx:id="oldValueColumn" text="Old Value" prefWidth="150.0" />
@@ -17,4 +18,10 @@
             <TableColumn fx:id="differenceColumn" text="Difference" prefWidth="150.0" />
         </columns>
     </TableView>
-</AnchorPane>
+
+    <Label text="Calculation Details" style="-fx-font-size: 16px; -fx-font-weight: bold; -fx-padding: 5; -fx-border-color: #cccccc; -fx-border-width: 0 0 1 0;"/>
+    <TextArea fx:id="calculationDetailsArea" editable="false" prefHeight="150" wrapText="true" style="-fx-font-size: 14px;" />
+</VBox>
+
+
+
