--- a/src/main/resources/view/MainControlView.fxml
+++ b/src/main/resources/view/MainControlView.fxml
@@ -58,9 +58,9 @@
 <?import javafx.scene.layout.HBox?>
 <VBox prefHeight="400.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="group50.controller.MainControlController">
   <children>
-    <MenuBar useSystemMenuBar="true" VBox.vgrow="NEVER">
+    <MenuBar fx:id="controlMenu" useSystemMenuBar="true" VBox.vgrow="NEVER">
       <menus>
-        <Menu mnemonicParsing="false" text="File">
+        <Menu  mnemonicParsing="false" text="File">
           <items>
             <MenuItem mnemonicParsing="false" text="Open…" />
                   <MenuItem mnemonicParsing="false" text="Import" onAction="#handleImportFile"/>
